--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -3,6 +3,8 @@ import Header from "../components/Header.astro";
 import PhotoDisplay from "../components/PhotoDisplay.astro";
 import thumbnail from "../images/gallery/a-thumbnail-2.png";
 import '../styles/global.css';
+
+const date = new Date('2023-06-12')
 ---
 <html lang="en">
 	<head>
@@ -16,11 +18,12 @@ import '../styles/global.css';
     <meta property="og:url" content="https://amitywarme.com/gallery" />
     <meta property="og:site-name" content="Amity Warme" />
     <meta name="image" property="og:image" content={thumbnail} />
+    <meta property="og:image:secure_url" content="https://github.com/connorwarme/pro-site/raw/main/src/images/gallery/a-thumbnail-2.png" />
     <meta property="og:image-width" content="1200" />
     <meta property="og:image-height" content="627" />
     <meta name="author" content="Connor Warme" />
-    <meta name="publish_date" property="og:publish_date" content="2023-04-23" />
-    <meta property="article:modifiedtime" content={Date.now().toString()}/>
+    <meta name="publish_date" property="article:published_time" content="2023-04-23" />
+    <meta property="article:modified_time" content={date.toISOString()}/>
 		<meta name="generator" content={Astro.generator} />
     <script src="../scripts/menu.js" />
 		<title>Amity | Gallery</title>
