Add new trad single pitch ascent

--- a/src/components/Achieve.astro
+++ b/src/components/Achieve.astro
@@ -69,11 +69,17 @@ const multi = [
   }
 ];
 const singleTrad = [
-  {
+{
     climb: 'Stingray',
     grade: '5.13d',
     // style: 'free, redpoint',
     location: 'Joshua Tree',
+  },
+  {
+    climb: 'Tainted Love',
+    grade: '5.13d',
+    // style: 'free, redpoint',
+    location: 'Squamish',
   },
     {
     climb: 'Enter the Dragon',
@@ -86,13 +92,7 @@ const singleTrad = [
     grade: '5.13c',
     // style: 'free, redpoint',
     location: 'Sedona',
-  },
-  {
-    climb: 'Buffaloes in Space',
-    grade: '5.13',
-    // style: 'free, redpoint',
-    location: 'South Platte',
-  },
+  }
 ];
 const singleSport = [
   {
