Add photos to gallery display

--- a/src/components/PhotoDisplay.astro
+++ b/src/components/PhotoDisplay.astro
@@ -20,6 +20,8 @@ import tales from "../images/gallery/tales.jpg";
 import guns from "../images/gallery/guns.jpg";
 import jetstream from "../images/gallery/jetstream.jpg";
 import arrow from "../images/icons/arrow-custom.png";
+import tainted from "../images/gallery/tainted1.jpg";
+import taintedlove from "../images/gallery/tainted2.jpg";
 
 const array = [
   {
@@ -54,6 +56,17 @@ const array = [
       site: 'https://www.taylorshaffer.com/',
     },
     position: '25%',
+  },
+  {
+    src: taintedlove,
+    alt: 'Amity on Tainted Love',
+    caption: 'Tainted Love',
+    location: `Squamish, BC`,
+    credit: {
+      name: 'Rachel Ross',
+      site: 'https://www.rachelrossmedia.com/',
+    },
+    position: '65%',
   },
   {
     src: jetstream,
@@ -164,6 +177,17 @@ const array = [
       site: 'https://samuelcrossley.media/',
     },
     position: '75% 0%',
+  },
+  {
+    src: tainted,
+    alt: 'Amity on Tainted Love',
+    caption: 'Tainted Love',
+    location: `Squamish, BC`,
+    credit: {
+      name: 'Rachel Ross',
+      site: 'https://www.rachelrossmedia.com/',
+    },
+    position: '60%',
   },
   {
     src: air,
