Add to blog photos

--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -14,6 +14,8 @@ import zucchini from "../images/posts/zucchini.png";
 import pumpkin from "../images/posts/pumpkin.png";
 import friad from "../images/posts/friad.jpeg";
 import struggle from "../images/posts/struggle.jpg";
+import stingray from "../images/gallery/stingray.jpg";
+import tainted from "../images/gallery/tainted1.jpg";
 
 const image = {
   url: gate,
@@ -36,6 +38,8 @@ const images = [
   pumpkin,
   friad,
   struggle,
+  stingray,
+  tainted,
 ]
 const { frontmatter } = Astro.props;
 ---
