Update front page achievements

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,13 @@ import mark from "../images/gallery/SCM_220409_8994.jpg";
 
 const bigwall = [
   {
+    climb: 'El Niño',
+    grade: '5.13c',
+    pitches: 25,
+    style: 'ground-up',
+    location: 'Yosemite',
+  },
+  {
     climb: 'El Corazon',
     grade: '5.13b',
     pitches: 32,
@@ -23,13 +30,6 @@ const bigwall = [
     grade: '5.13a',
     pitches: 32,
     style: 'self-supported, no rehearsal or stashing',
-    location: 'Yosemite',
-  },
-  {
-    climb: 'Golden Gate',
-    grade: '5.13a',
-    pitches: 33,
-    style: 'ground-up',
     location: 'Yosemite',
   }
 ]
