Add photo to gallery display

--- a/src/components/PhotoDisplay.astro
+++ b/src/components/PhotoDisplay.astro
@@ -22,6 +22,7 @@ import jetstream from "../images/gallery/jetstream.jpg";
 import arrow from "../images/icons/arrow-custom.png";
 import tainted from "../images/gallery/tainted1.jpg";
 import taintedlove from "../images/gallery/tainted2.jpg";
+import lucy from "../images/gallery/lucy.jpg"
 
 const array = [
   {
@@ -133,6 +134,17 @@ const array = [
       site: 'https://www.mccordmedia.org/',
     },
     position: '70% 33%',
+  },
+  {
+    src: lucy,
+    alt: 'Amity on Lucy the Labrador, high on El Niño',
+    caption: 'El Niño',
+    location: `El Capitan, Yosemite`,
+    credit: {
+      name: 'Nelson Klein',
+      site: 'https://www.nelsonklein.com/',
+    },
+    position: '65%',
   },
   {
     src: six,
