Fix file location typo

--- a/src/components/PhotoDisplay.astro
+++ b/src/components/PhotoDisplay.astro
@@ -22,7 +22,7 @@ import jetstream from "../images/gallery/jetstream.jpg";
 import arrow from "../images/icons/arrow-custom.png";
 import tainted from "../images/gallery/tainted1.jpg";
 import taintedlove from "../images/gallery/tainted2.jpg";
-import lucy from "../images/gallery/lucy.jpg"
+import lucy from "../images/gallery/Lucy.jpg"
 
 const array = [
   {
