Address bug, remove

--- a/src/pages/dietitian.astro
+++ b/src/pages/dietitian.astro
@@ -94,8 +94,8 @@ const arrowVar = `url(${arrowList})`;
           { testimonial.map((object) => {
             return (
               <li>
-                <p>{object[0].text}</p>
-                <p><em>-{object[0].client}</em></p>
+                <p>{object.text}</p>
+                <p><em>-{object.client}</em></p>
               </li>
             )
           })}
