Update climb and update risk

--- a/src/components/Achieve.astro
+++ b/src/components/Achieve.astro
@@ -54,6 +54,13 @@ const multi = [
     location: 'RMNP',
   },
   {
+    climb: 'Stélmexw',
+    grade: '5.13c',
+    pitches: 5,
+    style: '',
+    location: 'Squamish'
+  }
+  {
     climb: 'Mark of the Beast',
     grade: '5.13b',
     pitches: 5,
@@ -90,7 +97,7 @@ const singleTrad = [
   },
   {
     climb: 'Tainted Love',
-    grade: '5.13d',
+    grade: '5.13d R',
     // style: 'free, redpoint',
     location: 'Squamish',
   },
