--- a/src/pages/content.astro
+++ b/src/pages/content.astro
@@ -22,7 +22,7 @@ const pageTitle = "Amity | Content";
   <div class="content-wrapper">
     <div class="content-container">
       <h1 class="content-title">Content</h1>
-      <p>Stories, Recipies, Podcasts and More!</p>
+      <p>Stories, Recipes, Podcasts and More!</p>
       <div class="tags-container">
         <div class="arrow-container">Search by tags:
           <img class="jump-arrow" src={arrow} aria-label="Click to reveal tags" />
