--- a/src/pages/content.astro
+++ b/src/pages/content.astro
@@ -4,10 +4,11 @@ import TagDisplay from "../components/TagDisplay.astro";
 import BlogPost from "../components/BlogPost.astro";
 import arrow from "../images/icons/arrow-simple.svg";
 import lifeline from "../images/gallery/lifelineaz.jpg";
+import tainted from "../images/gallery/tainted2.jpg";
 
 const img = {
-  url: lifeline,
-  position: '70%',
+  url: tainted,
+  position: '60% 100%',
 }
 
 const allPosts = await Astro.glob('./posts/*.mdx');
