--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,14 +2,18 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import barnacle from "../images/gallery/Shaffer_Taylor-17.Lite.jpg";
 
-const pageTitle = "Amity | About"
+const pageInfo = {
+  title: "Amity | About",
+  description: 'Rock climber and dietitian, Amity is drawn to pushing her limits and empowering others to do the same.',
+}
 const image = {
   url: barnacle,
   position: '22% top',
+  alt: 'Amity on the first ascent of Barnacle Scars in RMNP'
 }
 ---
 
-<BaseLayout pageTitle={pageTitle} img={image} url="https://amitywarme.com/about">
+<BaseLayout page={pageInfo} img={image} url="https://amitywarme.com/about">
   <div class="about-wrapper">
     <div class="about-content">
       <div class="about-initial">
