--- a/src/pages/content.astro
+++ b/src/pages/content.astro
@@ -8,6 +8,7 @@ import tainted from "../images/gallery/tainted2.jpg";
 const img = {
   url: tainted,
   position: '60% 100%',
+  alt: 'Amity stemming high above Howe Sound in Squamish, BC'
 }
 
 const allPosts = await Astro.glob('./posts/*.mdx');
@@ -15,10 +16,13 @@ const sortedPosts = [...allPosts].sort((a, b) => {
   return +new Date(b.frontmatter.pubDate) - +new Date(a.frontmatter.pubDate)
 });
 const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
-const pageTitle = "Amity | Content";
+const pageInfo = {
+  title: 'Amity | Content',
+  description: 'A collection of blog posts written by Amity, videos of her in action, and features in the news.'
+}
 ---
 
-<BaseLayout pageTitle={pageTitle} img={img} url="https://amitywarme.com/content">
+<BaseLayout page={pageInfo} img={img} url="https://amitywarme.com/content">
   <div class="content-wrapper">
     <div class="content-container">
       <h1 class="content-title">Content</h1>
