Adjust gallery description

--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -12,7 +12,7 @@ const date = new Date('2023-06-12')
 		<link rel="icon" type="image/png" href="/a-custom.png" />
 		<meta name="viewport" content="width=device-width" />
     <meta name="title" property="og:title" content="Amity | Gallery" />
-    <meta name="description" property="og:description" content="Amity Warme - climber and registered dietitian. Amity's accomplishments include Freerider in a Day (FRIAD), El Corazon, and Golden Gate on El Capitan. As a dietitian, Amity seeks to help athletes use nutrition to maximize their performance and protect long-term health." />
+    <meta name="description" property="og:description" content="A photo gallery of Amity in action, from climbing big walls in Yosemite to stemming in Squamish to desert sandstone in Indian Creek and Red Rock." />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://amitywarme.com/gallery" />
