--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -2,7 +2,7 @@
 const { platform, username, image } = Astro.props;
 ---
 
-<a href={`https://www.${platform}.com/${username}`} target="_blank" rel="noreferrer">
+<a href={`https://www.${platform}.com/${username}`} target="_blank" rel="noreferrer" aria-label=`Open new tab to Amity's ${platform} profile`>
   <img class="sm-icon" src={image} alt={platform} >
 </a>
 
