Set initial scale of viewport

--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -10,7 +10,7 @@ const date = new Date('2023-06-12')
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/png" href="/a-custom.png" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" property="og:title" content="Amity | Gallery" />
     <meta name="description" property="og:description" content="A photo gallery of Amity in action, from climbing big walls in Yosemite to stemming in Squamish to desert sandstone in Indian Creek and Red Rock." />
     <meta property="og:locale" content="en_US" />
