Add aria-label for link opening new tab

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ import fb from "../images/icons/facebook.svg";
   </div>
   <div class="copyright">Copyright &#169 2024 Amity Warme</div>
   <div class="built">Built by 
-    <a href="https://github.com/connorwarme" target="_blank" rel="noreferrer">Connor Warme</a>
+    <a href="https://github.com/connorwarme" target="_blank" rel="noreferrer" aria-label="Open new tab to Connor's Github profile">Connor Warme</a>
   </div>
 </footer>
 
